[tool.poetry]
name = "udemy-notifications"
version = "1.0.0"
description = ""
authors = ["Igor Zanella <igorzanella.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
